--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,15 @@
 .container {
     padding: 0 30px;
+    width: 100%;
 }
 .head {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: fixed;
+    z-index: 2;
+    background-color: rgb(246, 255, 255);
+    width: 95%;
 }
 .logo {
     color: rgb(255, 0, 140);
@@ -18,12 +23,21 @@
 .link-container > li {
     margin-left: 3em;
 }
+.hamburgar {
+    border: 1px solid black;
+    border-radius: 5px;
+    margin-right: 20px;
+    display: none;
+}
 .pink {
     display: flex;
-    width: 100%;
+    width: 100vw;
     background-color: rgba(255, 191, 201, 0.893);
     border-radius: 20px;
     justify-content: space-between;
+    position: relative;
+    top: 100px;
+    
 }
 .home {
     display: flex;
@@ -74,6 +88,8 @@
     margin-right: 15px;
     gap: 15px;
 }
+ 
+
 .options {
     display: flex;
     align-items: center;
@@ -140,6 +156,7 @@
     margin:50px 70px;
     height: 230px;
     border-radius: 5px;
+    position: absolute;
     
 } 
 .all {
@@ -212,4 +229,98 @@
 }
 .calls {
     margin-left: -45px;
+}
+.positioning {
+    height: 100px;
+    width: 100px;
+    background-color: rgba(255, 191, 201, 0.893);
+    position: relative;
+}
+.relative {
+    height: 20px;
+    width: 100%;
+    background-color: rgb(3, 3, 255);
+    position: absolute;
+    right: 50px;
+    top: 50px;
+    left: 50px;
+    bottom: 0;
+
+}
+.static {
+    height: 20px;
+    width: 20px;
+    background-color: red;
+    
+}
+@media (max-width:760px) {
+
+   .link-container {
+     display: none;
+   }
+   .hamburgar {
+    display: block;
+    width: 35px;
+    height: 35px;
+}
+.pink {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    position: static;
+    justify-content: center;
+}
+.orange-watch {
+    margin: 0;
+    height: 350px;
+    width: 350px;
+}
+.icons {
+    flex-direction: row;
+}
+.image2 {
+    display: none;
+}
+.head {
+    position: static;
+    background-color: white;
+    height: 10vh;
+    
+}
+.new, .newtwo, .options, .choice {
+    flex-direction: column;
+}
+.choice {
+    display: none;
+}
+.home  {
+    padding:0 50px;
+}
+.search {
+    width: 60%;
+}
+
+.see-all {
+    flex-direction: column;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    width: 40vh;
+    margin-left: 0;
+}
+.Latest {
+    display: none;
+
+}
+.foot {
+    flex-direction: column;
+}
+.links ul li {
+    padding: 5px;
+    font-size: 10px;
+}
+.see-all {
+    margin: 50px 0;
+}
+
 }
