--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: fixed;
+   
     z-index: 2;
     background-color: rgb(246, 255, 255);
     width: 95%;
@@ -254,7 +254,9 @@
     
 }
 @media (max-width:760px) {
-
+    .container {
+        padding: 0;
+    }
    .link-container {
      display: none;
    }
@@ -307,6 +309,7 @@
     justify-content: center;
     width: 40vh;
     margin-left: 0;
+    
 }
 .Latest {
     display: none;
@@ -314,6 +317,7 @@
 }
 .foot {
     flex-direction: column;
+    margin-right: 10%;
 }
 .links ul li {
     padding: 5px;
